@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+03-Jul-2013 Jean-Marie Simonet
+ # [#31321] Fixed issue with tooltip text not being escaped when no title is given. Thanks Thanks Peter van Westen
+
 01-Jul-2013 Jean-Marie Simonet
  ^ [#30849] Show alias for menu items on menu assignement. Thanks David Hurley
  $ Updating Installation lang files: ar-AA, fi-FI, ja-JP, sy-IQ, uk-UA
